--- a/FeedList/app/src/main/res/values/strings.xml
+++ b/FeedList/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="retry">Retry</string>
+    <string name="description">Image from feed content</string>
 </resources>
