--- a/FeedList/app/src/main/res/values/strings.xml
+++ b/FeedList/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">FeedList</string>
     <string name="retry">Retry</string>
     <string name="description">Image from feed content</string>
+    <string name="loading">Loading . .</string>
 </resources>
